--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "caruazu",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.15.0",
     "nodemon": "^3.1.10"
   }
 }
